Add footer and clear input function

--- a/index.html
+++ b/index.html
@@ -8,15 +8,24 @@
 </head>
 
 <body>
+  <main>
+    <form class="search-form">
+      <label>City or State</label>
+      <input type="text" class="search" placeholder="City or State">
+      <ul class="suggestions">
+        <li>Filter for a city</li>
+        <li>or a state</li>
+      </ul>
+    </form>
 
-  <form class="search-form">
-    <label>City or State</label>
-    <input type="text" class="search" placeholder="City or State">
-    <ul class="suggestions">
-      <li>Filter for a city</li>
-      <li>or a state</li>
-    </ul>
-  </form>
+  </main>
+  <footer class="footer">
+    <p>Challenge 6 - 30 Days of JavaScript by
+      <a href="https://JavaScript30.com">Wes Bos</a>
+    </p>
+    <p>Esther Pato</p>
+  </footer>
+
   <script src="index.js"></script>
 </body>
 
